editing README.md, response img are now blob, adding swagger docs for images route
